--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Synthesis - Cool</title>
+    <title>Processing</title>
 </head>
 
 <body>
     <div id="synthesis">
-        <button id="item1">Saw</button>
-        <button id="item2">Modulation</button>
-        <button id="item3">Noise</button>
-        <button id="item4">Additive</button>
+        <button id="item1">Load Sample</button>
+        <button id="item2">Play Sample</button>
+        <button id="item3">Load Impulse</button>
+        <button id="item4">Play Convolution</button>
+        <button id="item5">Play Delay</button>
+        <button id="item6">Play Waveshaping</button>
     </div>
 </body>
 
