--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="item3">Load Impulse</button>
         <button id="item4">Play Convolution</button>
         <button id="item5">Play Delay</button>
-        <button id="item6">Play Waveshaping</button>
+        <button id="item6">Play Waveshaping test</button>
     </div>
 </body>
 
