--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <title>Processing</title>
-</head>
-
-<body>
-    <div id="synthesis">
-        <button id="item1">Load Sample</button>
-        <button id="item2">Play Sample</button>
-        <button id="item3">Load Impulse</button>
-        <button id="item4">Play Convolution</button>
-        <button id="item5">Play Delay</button>
-        <button id="item6">Play Waveshaping</button>
-    </div>
-</body>
-
-<!-- The script tag links to the Javascript file -->
-<script src="app.js"></script>
-
-<!-- Reference to the stylesheet -->
-<link rel="stylesheet" type="text/css" href="style.css" />
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flocking [p5.js]</title>
+    <script src="lib/boid.js"></script>
+    <script src="lib/flock.js"></script>
+    <script src="flocking.js"></script>
+    <script src="lib/p5.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <main></main>
+  </body>
 </html>
