--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <button id="buttonSequence"> Sequence </button>
     <button id="buttonCurve"> Curve </button>
+    <button id="buttonNoise"> Noise </button>
 
   </body>
 
